src/App.css
@import url('https://fonts.googleapis.com/css?family=Montserrat|Share+Tech+Mono');

body {
  font-family: 'Montserrat', sans-serif;
}

.source {
  font-family: 'Share Tech Mono', monospace;
}

.source a {
  font-size: 12px;
  color: gray;
  text-decoration: none;
}

.source span {
  font-size: 12px;
  color: gray;
}

.source a:active {
  color: gray;
}

.source a:hover {
  text-decoration: underline;
}

.title a {
  font-size: 12px;
  color: white;
  text-decoration: none;
}

.title a:visited {
  color: gray;
}

.index {
  color: gray;
  font-size: 12px;
  text-align: right;
}

.site-title {
  font-size: 16px;
  color: white;
}

.powered-by {
  font-size: 12px;
  color: white;
}

